--- a/html/school.html
+++ b/html/school.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>school</title>
-	<link rel="stylesheet" type="text/css" href="./style_school.css">
+	<link rel="stylesheet" type="text/css" href="../css/style_school.css">
 </head>
 <body>
 <!-- 头部 -->
@@ -28,16 +28,16 @@
 		<P class="p6">Ready-made,customizable,HTME<br>landing page sections.</p>
 		<ul class="artone_ul">
 			
-			<li ><img src="./img/icon01.png"></li>
+			<li ><img src="../img/icon01.png"></li>
 			<li class="artone_li1" >Mobile First<p>All modulz are built mobile-first for maximum <br>device compatibility</p></li>
 
-			<li ><img src="./img/icon02.png"></li>
+			<li ><img src="../img/icon02.png"></li>
 			<li class="artone_li2">Accessibility<p>Support for IE8,mobile and table devices,<br>screenreaders and color blind</p></li>
 
-			<li ><img src="./img/icon03.png"></li>
+			<li ><img src="../img/icon03.png"></li>
 			<li class="artone_li3">Fluid Typography<p>On different screen size,fonts automagically <br>scale with the viewport</p></li>
 
-			<li ><img src="./img/icon04.png"></li>
+			<li ><img src="../img/icon04.png"></li>
 			<li class="artone_li4">Customization<p>Make any design your own using the Style <br>Editor.Personalize fonts.colors.and layouts to <br>create the custom look you want.</p></li>
 		</ul>
 	</div>
@@ -55,19 +55,19 @@
 	<div class="artthree">
 		<p class="artthree_p1">Try Our Awesome Products</p>
 		<div class="artthree_img">
-		<p><img src="./img/product01.png"></p>
-		<p><img src="./img/product02.png"></p>
-		<p><img src="./img/product03.png"></p>
+		<p><img src="../img/product01.png"></p>
+		<p><img src="../img/product02.png"></p>
+		<p><img src="../img/product03.png"></p>
 		</div>
 	</div>
 
 	<div class="artthree_2">
 		<ul class="artthree_2_ul">
-			<li class="li1"><img src="./img/p01.png"> </li>
+			<li class="li1"><img src="../img/p01.png"> </li>
 			<li class="li2">Learn How to Improve Your Personal Business<br>Li Jun, a China Academy of Engineering academician and also dir</li>
 			
 			<li class="li3">Choose Between Two Beautifully Designed Color Schemes.<br>China will come up with its own smart car standards, traffic ru</li>
-			<li class="li4"><img src="./img/p02.png"> </li>
+			<li class="li4"><img src="../img/p02.png"> </li>
 		</ul>
 	</div>
 <!-- 第四部分 -->
@@ -75,13 +75,13 @@
 		<p class="art_four_p1">Our Awesome Crew</p>
 		<p class="art_four_p2">Our unique online teaching style makes learning easy for everyo</p>
 		<ul class="art_four_ul">
-			<li style="position:relative;"><a href="#" class="active"> <img class="style1" style="position: absolute;" src="./img/teacher01.png"><img  class="style2" src="./img/style01.png"></a> </li>
+			<li style="position:relative;"><a href="#" class="active"> <img class="style1" style="position: absolute;" src="../img/teacher01.png"><img  class="style2" src="../img/style01.png"></a> </li>
 
-			<li style="position: relative;"><a href="#">               <img class="style1" style="position: absolute;" src="./img/teacher02.png"><img class="style2" src="./img/style01.png"></a></li>
+			<li style="position: relative;"><a href="#">               <img class="style1" style="position: absolute;" src="../img/teacher02.png"><img class="style2" src="../img/style01.png"></a></li>
 
-			<li style="position: relative;"> <a href="#">              <img class="style1"  style="position: absolute;" src="./img/teacher03.png"><img class="style2" src="./img/style01.png"></a></li>
+			<li style="position: relative;"> <a href="#">              <img class="style1"  style="position: absolute;" src="../img/teacher03.png"><img class="style2" src="../img/style01.png"></a></li>
 
-			<li style="position: relative;"> <a href="#">              <img class="style1" style="position: absolute;" src="./img/teacher04.png"><img class="style2" src="./img/style01.png"></a></li>
+			<li style="position: relative;"> <a href="#">              <img class="style1" style="position: absolute;" src="../img/teacher04.png"><img class="style2" src="../img/style01.png"></a></li>
 		</ul>
 	</div>
 
@@ -130,7 +130,7 @@
 	<ul>
 		<li>ENJOY YOUR LIFE</li>
 		<li>Creat web UI kit for designers.<br>freelancers or business</li>
-		<li><img src="./img/p03.png"></li>
+		<li><img src="../img/p03.png"></li>
 	</ul>
 </div>
 </footer>
